1.修改无组织的群组点击更换组织崩溃的bug；2.修改首页tab间隔（离+号太近）；3.视频资讯增加底部loading（优化用户体验）;4.修改首页

--- a/app/src/main/res/layout/fragment_add_group.xml
+++ b/app/src/main/res/layout/fragment_add_group.xml
@@ -22,6 +22,7 @@
             android:paddingLeft="@dimen/dp20"
             android:paddingRight="@dimen/dp20"
             android:textColor="@color/text_color_black"
+            android:focusable="false"
             android:textSize="@dimen/dp14" />
 
         <View style="@style/style_divider_horizontal" />
