--- a/app/src/main/res/layout/fragment_video_info_detail.xml
+++ b/app/src/main/res/layout/fragment_video_info_detail.xml
@@ -76,11 +76,15 @@
     <FrameLayout
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
+
         <include layout="@layout/fragment_tslist"/>
+
     </FrameLayout>
+
     <com.zhiyicx.baseproject.widget.InputLimitView
         android:id="@+id/ilv_comment"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
