--- a/app/src/main/res/layout/fragment_add_group.xml
+++ b/app/src/main/res/layout/fragment_add_group.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
 
-        <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
+        <com.zhiyicx.thinksnsplus.widget.EditTextWithDel
             android:id="@+id/et_search_group"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp50"
@@ -22,7 +22,6 @@
             android:paddingLeft="@dimen/dp20"
             android:paddingRight="@dimen/dp20"
             android:textColor="@color/text_color_black"
-            android:focusable="false"
             android:textSize="@dimen/dp14" />
 
         <View style="@style/style_divider_horizontal" />
