1.基本完成小视频列表的展示，小视频详情自动播放以及上下滑动自动播放的功能

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -152,8 +152,12 @@
     <dimen name="sp35">35sp</dimen>
 
 
+    <dimen name="dp_sub_4">-4dp</dimen>
+    <dimen name="dp_1_dot_5">1.5dp</dimen>
     <dimen name="dp9">9dp</dimen>
     <dimen name="dp22">22dp</dimen>
+    <dimen name="dp23">23dp</dimen>
+    <dimen name="dp31">31dp</dimen>
     <dimen name="dp44">44dp</dimen>
     <dimen name="dp46">46dp</dimen>
     <dimen name="dp52">52dp</dimen>
