--- a/app/src/main/res/layout/fragment_video_info_detail.xml
+++ b/app/src/main/res/layout/fragment_video_info_detail.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:keepScreenOn="true"
     android:background="@color/white">
 
     <RelativeLayout
