--- a/app/src/main/res/layout/fragment_personal_center_header_v2.xml
+++ b/app/src/main/res/layout/fragment_personal_center_header_v2.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/personal_header"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/white"
-              android:gravity="center_horizontal"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/personal_header"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
     <!--个人中心页面头部-->
     <!--当前FrameLayout的高度为屏幕宽度的一半加上20dp-->
     <FrameLayout
@@ -23,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|top"
             android:scaleType="fitXY"
-            android:src="@mipmap/default_pic_personal"/>
+            android:src="@mipmap/default_pic_personal" />
 
         <ImageView
             android:id="@+id/iv_background_cover_top_hint"
@@ -32,7 +34,7 @@
             android:layout_gravity="center_horizontal|top"
 
             android:background="@mipmap/pic_mask_zy"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
         <ImageView
             android:id="@+id/iv_background_cover_bottom_hint"
@@ -41,7 +43,7 @@
             android:layout_gravity="center_horizontal|bottom"
             android:background="@mipmap/pic_mask_zy"
             android:rotation="180"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
         <com.zhiyicx.baseproject.widget.UserAvatarView
             android:id="@+id/iv_head_icon"
@@ -51,7 +53,7 @@
             android:layout_marginBottom="60dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/pic_default_secret"
-            app:ts_avatare_size="@dimen/headpic_for_user_home"/>
+            app:ts_avatare_size="@dimen/headpic_for_user_home" />
 
         <TextView
             android:id="@+id/tv_user_name"
@@ -62,7 +64,7 @@
             android:includeFontPadding="false"
             android:textColor="@color/white"
             android:textSize="@dimen/size_sub_title"
-            tools:text="阿超的超能力"/>
+            tools:text="阿超的超能力" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -78,7 +80,7 @@
                 android:paddingRight="@dimen/spacing_mid"
                 android:textColor="@color/white"
                 android:textSize="@dimen/size_content_assist"
-                tools:text="粉丝 26"/>
+                tools:text="粉丝 26" />
 
             <TextView
                 android:id="@+id/tv_user_follow"
@@ -88,7 +90,7 @@
                 android:paddingLeft="@dimen/spacing_mid"
                 android:textColor="@color/white"
                 android:textSize="@dimen/size_content_assist"
-                tools:text="关注 26"/>
+                tools:text="关注 26" />
 
 
         </LinearLayout>
@@ -104,7 +106,7 @@
         android:paddingTop="@dimen/spacing_small"
         android:textColor="@color/money_gold"
         android:textSize="@dimen/size_content_comment"
-        tools:text="认证：三年二班"/>
+        tools:text="认证：三年二班" />
 
     <TextView
         android:id="@+id/tv_address"
@@ -116,7 +118,7 @@
         android:paddingTop="@dimen/spacing_mid_small"
         android:textColor="@color/normal_for_assist_text"
         android:textSize="@dimen/size_content_comment"
-        tools:text="地址：环球中心"/>
+        tools:text="地址：环球中心" />
 
     <TextView
         android:id="@+id/tv_user_intro"
@@ -127,7 +129,7 @@
         android:paddingTop="@dimen/spacing_mid_small"
         android:textColor="@color/normal_for_assist_text"
         android:textSize="@dimen/size_content_assist"
-        tools:text="还有机会能够感觉，爱一个人的纯粹，你是我的小蝴蝶，我是你的小阿飞"/>
+        tools:text="还有机会能够感觉，爱一个人的纯粹，你是我的小蝴蝶，我是你的小阿飞" />
 
 
     <com.zhy.view.flowlayout.TagFlowLayout
@@ -140,17 +142,32 @@
         android:paddingLeft="@dimen/spacing_normal"
         android:paddingRight="@dimen/spacing_normal"
         android:paddingTop="@dimen/spacing_small"
-        app:max_select="0"
-        />
+        app:max_select="0" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp10"
+        android:background="@color/withdrawals_item_line" />
 
-        android:background="@color/withdrawals_item_line"
-       
-        />
     <include
+        layout="@layout/item_personal_center_dynamic_count"
+        android:visibility="gone" />
 
-        layout="@layout/item_personal_center_dynamic_count"/>
+    <net.lucode.hackware.magicindicator.MagicIndicator
+        android:id="@+id/mg_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/qa_top_select_height"
+        android:layout_gravity="left"
+        android:layout_marginBottom="@dimen/dp10"
+        android:background="@android:color/transparent" />
 
+    <View
+
+        style="@style/style_divider_horizontal"
+        android:layout_marginTop="@dimen/margin_10dp" />
+
+    <com.zhiyicx.thinksnsplus.widget.ContentViewPager
+        android:id="@+id/vp_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
