--- a/app/src/main/res/layout/fragment_personal_center_v2.xml
+++ b/app/src/main/res/layout/fragment_personal_center_v2.xml
@@ -1,22 +1,25 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <include
-            layout="@layout/fragment_tslist"
+        <ScrollView
+            android:fillViewport="true"
+            android:id="@+id/sv_personal_scrollview"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-        </include>
+            android:layout_height="0dp">
+            <include
+                layout="@layout/fragment_personal_center_header_v2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                />
+        </ScrollView>
 
         <!--底部的关注，聊天-->
         <LinearLayout
@@ -26,7 +29,7 @@
             android:layout_gravity="bottom"
             android:orientation="vertical">
 
-            <include layout="@layout/include_horizontal_divider_light"/>
+            <include layout="@layout/include_horizontal_divider_light" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -50,14 +53,13 @@
                         android:drawablePadding="@dimen/spacing_small_3dp"
                         android:text="@string/reward"
                         android:textColor="@color/important_for_content"
-                        android:textSize="@dimen/size_content"/>
+                        android:textSize="@dimen/size_content" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="@dimen/divider_line"
                     android:layout_height="match_parent"
-                    android:background="@color/general_for_line_light">
-                </View>
+                    android:background="@color/general_for_line_light"></View>
 
                 <LinearLayout
                     android:id="@+id/ll_follow_container"
@@ -74,14 +76,13 @@
                         android:drawablePadding="@dimen/spacing_small_3dp"
                         android:text="@string/follow"
                         android:textColor="@color/important_for_content"
-                        android:textSize="@dimen/size_content"/>
+                        android:textSize="@dimen/size_content" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="@dimen/divider_line"
                     android:layout_height="match_parent"
-                    android:background="@color/general_for_line_light">
-                </View>
+                    android:background="@color/general_for_line_light"></View>
 
                 <LinearLayout
                     android:id="@+id/ll_chat_container"
@@ -98,20 +99,13 @@
                         android:drawablePadding="@dimen/spacing_small_3dp"
                         android:text="@string/chat"
                         android:textColor="@color/important_for_content"
-                        android:textSize="@dimen/size_content"/>
+                        android:textSize="@dimen/size_content" />
                 </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <ImageView
-        android:visibility="visible"
-        android:id="@+id/iv_add_video"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="@dimen/dp60"
-        android:src="@mipmap/add_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:id="@+id/ll_toolbar_container_parent"
         android:layout_width="match_parent"
@@ -133,7 +127,8 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/spacing_mid"
                 android:paddingRight="@dimen/spacing_mid"
-                android:src="@mipmap/topbar_back_white"/>
+                android:src="@mipmap/topbar_back_white" />
+
             <ImageView
                 android:id="@+id/iv_refresh"
                 android:layout_width="wrap_content"
@@ -141,7 +136,8 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/iv_back"
                 android:src="@drawable/frame_loading_grey"
-                android:visibility="gone"/>
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
@@ -154,7 +150,7 @@
                 android:maxLines="1"
                 android:textColor="@color/toolbar_text_corlor_normal"
                 android:textSize="@dimen/toolbar_center_text_size"
-                tools:text="阿超的小蝴蝶"/>
+                tools:text="阿超的小蝴蝶" />
 
             <ImageView
                 android:id="@+id/iv_more"
@@ -164,10 +160,10 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/spacing_mid"
                 android:paddingRight="@dimen/spacing_mid"
-                android:src="@mipmap/topbar_more_white"/>
+                android:src="@mipmap/topbar_more_white" />
         </RelativeLayout>
 
-        <include layout="@layout/include_horizontal_divider"/>
+        <include layout="@layout/include_horizontal_divider" />
 
     </LinearLayout>
 
@@ -176,7 +172,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/masked_color"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <com.zhiyicx.baseproject.widget.InputLimitView
         android:id="@+id/ilv_comment"
