--- a/app/src/main/res/layout/item_personal_center_dynamic_count.xml
+++ b/app/src/main/res/layout/item_personal_center_dynamic_count.xml
@@ -1,33 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/ll_dynamic_count_container"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/personal_center_dynamic_count_view_height"
-              android:background="@color/general_for_bg_light"
-              android:gravity="center_vertical"
-              android:orientation="horizontal">
+    android:id="@+id/ll_dynamic_count_container"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/personal_center_dynamic_count_view_height"
+    android:background="@color/white"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_dynamic_count"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/spacing_normal"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="200条动态"
-        android:textColor="@color/normal_for_assist_text"
-        android:textSize="@dimen/size_content_comment"/>
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/ll_dynamic_count"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/tv_dynamic_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/spacing_normal"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="200条动态"
+                android:textColor="@color/normal_for_assist_text"
+                android:textSize="@dimen/size_content_comment" />
+
+            <View
+                android:id="@+id/view_dynamic_line"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
+                android:layout_marginRight="@dimen/margin_10dp"
+                android:background="@color/themeColor"
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_video_count"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/dp10"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/tv_video_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/spacing_normal"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="视频"
+                android:textColor="@color/normal_for_assist_text"
+                android:textSize="@dimen/size_content_comment" />
+
+            <View
+                android:id="@+id/view_video_line"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
+                android:background="@color/themeColor"
+                android:visibility="invisible" />
+        </LinearLayout>
+    </LinearLayout>
     <!--修改排序-->
     <TextView
+
         android:id="@+id/tv_type"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:drawablePadding="@dimen/spacing_normal"
         android:drawableRight="@mipmap/icon_question_sort"
+
         android:gravity="right|center_vertical"
         android:paddingLeft="@dimen/spacing_large"
         android:paddingRight="@dimen/spacing_normal"
         android:text="@string/all_dynamic"
         android:textColor="@color/normal_for_assist_text"
-        android:textSize="@dimen/size_icon_assist"/>
+        android:textSize="@dimen/size_icon_assist" />
 
 </LinearLayout>
