1.修复视频的分享类型为视频类型；2.修复搜索好友输入内容中包含空格无法搜索到的bug；3.修复聊天界面从其他界面返回后，底部输入框始终为【对方不是你的好友】bug；

--- a/app/src/main/res/layout/item_dynamic_detail_comment.xml
+++ b/app/src/main/res/layout/item_dynamic_detail_comment.xml
@@ -23,8 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/iv_headpic"
-        android:maxLength="@integer/username_max_length"
-        android:maxLines="1"
+        android:singleLine="true"
+        android:maxWidth="@dimen/dp200"
         android:paddingBottom="@dimen/spacing_mid_small"
         android:includeFontPadding="false"
         android:textColor="@color/important_for_content"
