--- a/app/src/main/res/layout/fragment_video_info_detail.xml
+++ b/app/src/main/res/layout/fragment_video_info_detail.xml
@@ -51,7 +51,7 @@
             android:textColor="@color/selector_theme_color_toolbar_text_color"
             android:textSize="@dimen/toolbar_right_text_size"
             android:visibility="invisible"
-            android:background="@mipmap/home_ico_more"
+            android:drawableRight="@mipmap/home_ico_more"
             tools:text="右边"
             />
         <ImageView
