--- a/app/src/main/res/layout/item_personal_video.xml
+++ b/app/src/main/res/layout/item_personal_video.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <FrameLayout
+        android:layout_marginLeft="@dimen/dp3"
+        android:layout_marginRight="@dimen/dp3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -10,7 +12,7 @@
             android:id="@+id/iv_video_image"
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
-            android:layout_height="@dimen/dp224"
+            android:layout_height="@dimen/dp200"
             />
         <TextView
             android:id="@+id/tv_video_title"
