1.修复动态列表，评论弹框显示异常的bug；2.修复动态列表时间显示异常的bug；3.当评论弹框dismiss时，隐藏软键盘；4.动态列表界面，如果正在播放，后台后，暂停播放；5.修复从动态列表进入的小视频详情接口调用错误

--- a/app/src/main/res/layout/item_small_video_play.xml
+++ b/app/src/main/res/layout/item_small_video_play.xml
@@ -26,7 +26,7 @@
         android:layout_height="@dimen/dp40"
         android:layout_gravity="center"
         android:visibility="invisible"
-        android:src="@mipmap/play_icon"/>
+        android:src="@mipmap/icon_small_video_play"/>
 
     <FrameLayout
         android:id="@+id/fl_content"
