修改邀约分享短链接，修改快讯分享链接。 修改糖果规则按钮样式

--- a/app/src/main/res/layout/fragment_withdrawals_detail.xml
+++ b/app/src/main/res/layout/fragment_withdrawals_detail.xml
@@ -20,7 +20,7 @@
         android:paddingTop="@dimen/spacing_mid_small_8dp"
         android:paddingBottom="@dimen/spacing_mid_small_8dp"
         android:text="@string/integration_rule"
-        android:visibility="gone"
+        android:visibility="visible"
         android:textColor="@color/white"
         />
 
