--- a/app/src/main/res/layout/fragment_mine_integration_new.xml
+++ b/app/src/main/res/layout/fragment_mine_integration_new.xml
@@ -20,16 +20,21 @@
     </LinearLayout>
 
     <TextView
+        android:layout_alignParentBottom="true"
         android:id="@+id/tv_recharge_and_withdraw_rule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center"
-        android:drawableLeft="@mipmap/ico_wallet_rules"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/spacing_large"
+        android:background="@drawable/selector_button_corner_circle_solid_small"
+        android:drawableLeft="@mipmap/ico_wallet_rules_white"
         android:drawablePadding="@dimen/spacing_small"
-        android:padding="@dimen/spacing_large"
+        android:paddingLeft="@dimen/spacing_large"
+        android:paddingRight="@dimen/spacing_large"
+        android:paddingTop="@dimen/spacing_mid_small_8dp"
+        android:paddingBottom="@dimen/spacing_mid_small_8dp"
         android:text="@string/integration_rule"
-        android:textColor="@color/rule_tip_color"
+        android:textColor="@color/white"
         />
 </RelativeLayout>
