1.修复首页当未读消息为0时，消息的小红点仍然显示的bug；2.修复广告页的相关问题；3.修复编辑资讯内容后，小视频的tab消失的bug；4.修改【已关注】为【取消关注】

--- a/app/src/main/res/layout/fragment_guide_v2.xml
+++ b/app/src/main/res/layout/fragment_guide_v2.xml
@@ -19,16 +19,16 @@
             android:id="@+id/guide_text"
             android:layout_width="@dimen/launch_advert_width"
             android:layout_height="@dimen/launch_advert_height"
-            android:layout_gravity="top|right"
+            android:layout_gravity="bottom|end"
             android:layout_marginRight="@dimen/spacing_normal"
-            android:layout_marginTop="@dimen/spacing_mid"
+            android:layout_marginBottom="@dimen/dp10"
             android:background="@drawable/shape_button_corner_advert_big"
-            android:clickable="false"
             android:gravity="center"
             android:minWidth="@dimen/info_channel_20dp"
             android:textColor="@color/copy_right_color"
             android:textSize="@dimen/size_advert_launche"
-            android:visibility="gone"/>
+            android:text="跳过"
+            android:visibility="invisible"/>
 
         <TextView
             android:layout_width="match_parent"
