1.增加糖果动画

--- a/app/src/main/res/layout/fragment_guide_v2.xml
+++ b/app/src/main/res/layout/fragment_guide_v2.xml
@@ -27,8 +27,7 @@
             android:minWidth="@dimen/info_channel_20dp"
             android:textColor="@color/copy_right_color"
             android:textSize="@dimen/size_advert_launche"
-            android:text="跳过"
-            android:visibility="invisible"/>
+            android:text="跳过"/>
 
         <TextView
             android:layout_width="match_parent"
