--- a/app/src/main/res/layout/fragment_info_detail.xml
+++ b/app/src/main/res/layout/fragment_info_detail.xml
@@ -123,4 +123,16 @@
         android:layout_gravity="center"
         android:visibility="gone"/>
 
+    <TextView
+        android:id="@+id/tv_integration_anim"
+        android:visibility="invisible"
+        android:layout_width="@dimen/dp60"
+        android:layout_height="@dimen/dp60"
+        android:text="糖果+1"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp12"
+        android:layout_gravity="center"
+        android:background="@drawable/shape_circle_bg_theme_color" />
+
 </android.support.design.widget.CoordinatorLayout>
