--- a/app/src/main/res/layout/fragment_video_info_detail.xml
+++ b/app/src/main/res/layout/fragment_video_info_detail.xml
@@ -1,103 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:keepScreenOn="true"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height_include_line_height">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:keepScreenOn="true"
+        android:background="@color/white">
 
-        <TextView
-            android:id="@+id/tv_toolbar_center"
-            android:layout_width="wrap_content"
-            android:singleLine="true"
-            android:layout_marginLeft="@dimen/toolbar_center_margin"
-            android:layout_marginRight="@dimen/toolbar_center_margin"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:textColor="@color/important_for_content"
-            android:textSize="@dimen/toolbar_center_text_size"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_height_include_line_height">
 
-        <TextView
-            android:id="@+id/tv_toolbar_left"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:drawableLeft="@mipmap/topbar_back"
-            android:drawablePadding="@dimen/spacing_small"
-            android:gravity="center"
-            android:paddingLeft="@dimen/toolbar_padding_left"
-            android:paddingRight="@dimen/toolbar_padding_right"
-            android:textColor="@color/toolbar_text_corlor_normal"
-            android:textSize="@dimen/toolbar_left_text_size"
-            tools:text="左边"
-            />
+            <TextView
+                android:id="@+id/tv_toolbar_center"
+                android:layout_width="wrap_content"
+                android:singleLine="true"
+                android:layout_marginLeft="@dimen/toolbar_center_margin"
+                android:layout_marginRight="@dimen/toolbar_center_margin"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:textColor="@color/important_for_content"
+                android:textSize="@dimen/toolbar_center_text_size"/>
 
-        <TextView
-            android:id="@+id/tv_toolbar_right"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right|center"
-            android:drawablePadding="@dimen/spacing_small"
-            android:gravity="center"
-            android:layout_marginRight="@dimen/dp10"
-            android:textColor="@color/selector_theme_color_toolbar_text_color"
-            android:textSize="@dimen/toolbar_right_text_size"
+            <TextView
+                android:id="@+id/tv_toolbar_left"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableLeft="@mipmap/topbar_back"
+                android:drawablePadding="@dimen/spacing_small"
+                android:gravity="center"
+                android:paddingLeft="@dimen/toolbar_padding_left"
+                android:paddingRight="@dimen/toolbar_padding_right"
+                android:textColor="@color/toolbar_text_corlor_normal"
+                android:textSize="@dimen/toolbar_left_text_size"
+                tools:text="左边"
+                />
+
+            <TextView
+                android:id="@+id/tv_toolbar_right"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right|center"
+                android:drawablePadding="@dimen/spacing_small"
+                android:gravity="center"
+                android:layout_marginRight="@dimen/dp10"
+                android:textColor="@color/selector_theme_color_toolbar_text_color"
+                android:textSize="@dimen/toolbar_right_text_size"
+                android:visibility="invisible"
+                tools:text="右边"
+                />
+            <ImageView
+                android:id="@+id/iv_toolbar_right"
+                android:layout_gravity="right|center_vertical"
+                android:gravity="center"
+                android:paddingLeft="@dimen/dp10"
+                android:paddingRight="@dimen/dp10"
+                android:src="@mipmap/topbar_more_black"
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+            <View
+                android:id="@+id/v_horizontal_line"
+                style="@style/style_divider_horizontal"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/fl_video_parent"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp200"
+            android:background="@color/black_deep">
+
+            <com.zhiyicx.thinksnsplus.modules.shortvideo.helper.ZhiyiVideoView
+                android:id="@+id/videoplayer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+
+            <include layout="@layout/fragment_tslist"/>
+
+        </FrameLayout>
+
+        <com.zhiyicx.baseproject.widget.InputLimitView
+            android:id="@+id/ilv_comment"
             android:visibility="invisible"
-            android:drawableRight="@mipmap/home_ico_more"
-            tools:text="右边"
-            />
-        <ImageView
-            android:id="@+id/iv_toolbar_right"
-            android:layout_gravity="right|center_vertical"
-            android:gravity="center"
-            android:visibility="invisible"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            />
-        <View
-            android:id="@+id/v_horizontal_line"
-            style="@style/style_divider_horizontal"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:fitsSystemWindows="true"
+            app:limitSize="@integer/comment_input_max_size"
+            app:showLimitSize="@integer/show_comment_input_size"/>
 
-    <FrameLayout
-        android:id="@+id/fl_video_parent"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp200"
-        android:background="@color/black_deep">
 
-        <com.zhiyicx.thinksnsplus.modules.shortvideo.helper.ZhiyiVideoView
-            android:id="@+id/videoplayer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
-    </FrameLayout>
 
-    <FrameLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <include layout="@layout/fragment_tslist"/>
-
-    </FrameLayout>
-
-    <com.zhiyicx.baseproject.widget.InputLimitView
-        android:id="@+id/ilv_comment"
+    <TextView
+        android:id="@+id/tv_integration_anim"
         android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:fitsSystemWindows="true"
-        app:limitSize="@integer/comment_input_max_size"
-        app:showLimitSize="@integer/show_comment_input_size"/>
-</LinearLayout>
+        android:layout_width="@dimen/dp60"
+        android:layout_height="@dimen/dp60"
+        android:text="糖果+1"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp12"
+        android:layout_gravity="center"
+        android:background="@drawable/shape_circle_bg_theme_color" />
+
+</FrameLayout>
