--- a/app/src/main/res/layout/fragment_withdraw_currency.xml
+++ b/app/src/main/res/layout/fragment_withdraw_currency.xml
@@ -187,7 +187,7 @@
             android:hint="请输入..."
             android:gravity="bottom"
             android:maxLength="6"
-            android:inputType="number"/>
+            android:inputType="numberPassword"/>
 
     </LinearLayout>
 
