--- a/app/src/main/res/layout/item_video_info_comment.xml
+++ b/app/src/main/res/layout/item_video_info_comment.xml
@@ -25,8 +25,10 @@
         tools:text="xxxxxxxxxxxxxxxxxxxxxxxxx"/>
 
     <LinearLayout
+        android:id="@+id/ll_info_count"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp40"
+        android:visibility="gone"
         android:gravity="center_vertical">
 
         <TextView
