--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -151,6 +151,7 @@
     <dimen name="sp17">17sp</dimen>
     <dimen name="sp35">35sp</dimen>
 
+    <dimen name="px1">1px</dimen>
 
     <dimen name="dp_sub_4">-4dp</dimen>
     <dimen name="dp_1_dot_5">1.5dp</dimen>
@@ -165,6 +166,7 @@
     <dimen name="dp70">70dp</dimen>
     <dimen name="dp74">74dp</dimen>
     <dimen name="dp77">77dp</dimen>
+    <dimen name="dp84">84dp</dimen>
     <dimen name="dp90">90dp</dimen>
     <dimen name="dp92">92dp</dimen>
     <dimen name="dp98">98dp</dimen>
@@ -176,6 +178,7 @@
     <dimen name="dp154">154dp</dimen>
     <dimen name="dp200">200dp</dimen>
     <dimen name="dp224">224dp</dimen>
+    <dimen name="dp268">268dp</dimen>
     <dimen name="dp300">300dp</dimen>
     <dimen name="dp306">306dp</dimen>
     <dimen name="dp318">318dp</dimen>
